src/test/resources/testcases/valid/basic/var_decl.tc
// Test variable declarations
int a = 1;
int b = 2;
int main() {
    int c = a + b;
    return c;
}
