src/test/resources/testcases/invalid/variables/undefined_var.tc
// Test undefined variable
int main() {
    return b; // Should fail
}
